--- a/css/main.css
+++ b/css/main.css
@@ -194,13 +194,16 @@ ul {
 @media screen and (min-width: 90rem) {
     .main {max-width: 90rem; padding: 1rem 6rem; margin: 0 auto; font-size: 1.1rem}
     .top {max-width: 90rem; padding: 2rem 6rem; margin: 0 auto}
-    .gallery {-moz-column-count: 4; -webkit-column-count: 4; column-count: 4}
 }
 
 @media screen and (min-width: 64rem) and (max-width: 90rem) {
     .main {padding: 1rem 4rem; font-size: 1.1rem}
     .top {padding: 2rem 4rem}
-    .gallery {-moz-column-count: 3; -webkit-column-count: 3; column-count: 3}
+}
+
+@media screen and (max-width: 64rem) {
+    .main {padding: 1rem 1rem; font-size: 1rem}
+    .top {padding: 2rem 1rem}
 }
 
 @media screen and (max-width: 55rem) {
@@ -231,16 +234,19 @@ ul {
     }
 }
 
-@media screen and (max-width: 64rem) {
-    .main {padding: 1rem 1rem; font-size: 1rem}
-    .top {padding: 2rem 1rem}
+@media screen and (min-width: 75rem) {
+    .gallery {-moz-column-count: 4; -webkit-column-count: 4; column-count: 4}
 }
 
-@media screen and (min-width: 42rem)  and (max-width: 64rem) {
+@media screen and (min-width: 53rem) and (max-width: 75rem) {
+    .gallery {-moz-column-count: 3; -webkit-column-count: 3; column-count: 3}
+}
+
+@media screen and (min-width: 31rem) and (max-width: 53rem) {
     .gallery {-moz-column-count: 2; -webkit-column-count: 2; column-count: 2}
 }
 
-@media screen and (max-width: 42rem) {
+@media screen and (max-width: 31rem) {
     .gallery {-moz-column-count: 1; -webkit-column-count: 1; column-count: 1}
 }
 
