--- a/css/main.css
+++ b/css/main.css
@@ -181,8 +181,8 @@ ul {
 }
 
 .gallery img {
-    width: 100% !important;
-    height: auto !important;
+    width: 100%;
+    height: auto;
 }
 
 .gallery {    
