--- a/css/main.css
+++ b/css/main.css
@@ -178,17 +178,13 @@ ul {
     -webkit-column-gap: 1rem;    
     -moz-column-gap: 1rem;
     column-gap: 1rem;
+    margin-right: auto;    
+    margin-left: auto
 }
 
 .gallery img {
     width: 100%;
     height: auto;
-}
-
-.gallery {    
-    display: inline-block;    
-    margin-right: auto;    
-    margin-left: auto;
 }
 
 @media screen and (min-width: 90rem) {
